--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 </head>
 <body>
-    <h1>ScriptSmart™ Word Frequency</h1>
-    <h3>Welcome to ScriptSmart™! This platform is designed to make language learning more relevant to you by focusing on the vocabulary from the media you consume most, whether it's movies, shows, or literature. By pasting your selected text, ScriptSmart identifies and displays the most frequently used words, allowing you to learn the language as it is used in the media you love. Move beyond textbook vocabulary and immerse yourself in the language used in your favorite media.</h3>
+    <h1>ScriptSmart Word Frequency</h1>
+    <h3>Welcome to ScriptSmart! This platform is designed to make language learning more relevant to you by focusing on the vocabulary from the media you consume most, whether it's movies, shows, or literature. By pasting your selected text, ScriptSmart identifies and displays the most frequently used words, allowing you to learn the language as it is used in the media you love. Move beyond textbook vocabulary and immerse yourself in the language used in your favorite media.</h3>
     <form id="scriptForm">
         <textarea id="scriptInput" placeholder="Paste your script here" rows="10" cols="50"></textarea>
         <input type="number" id="topN" value="10" min="1">
